--- a/SpringBoot/Views/Views/excel.html
+++ b/SpringBoot/Views/Views/excel.html
@@ -106,6 +106,7 @@
 				elem: '#table1',
 				toolbar:'#add',
 				data: list, //数据接口
+				limit: list.length, //显示行数
 				even: true, //隔行显示
 				cols: [[ //表头
 					{field:'a', title:'A', align:'left', width:'200'},
