--- a/SpringBoot/Views/index.html
+++ b/SpringBoot/Views/index.html
@@ -204,11 +204,7 @@
 		"id": '0',
 		"url": "/home.html",
 		"icon": "glyphicon glyphicon-home",
-		"isdelete": false,
 		"tabType": 0,
-		"describes": "",
-		"sequence": '',
-		"pid": 0,
 		"name": "首页",
 		"floatPrompt": "",
 		"openby": 0,
@@ -218,28 +214,30 @@
 		"id": '9',
 		"url": "",
 		"icon": "glyphicon glyphicon-folder-open",
-		"isdelete": false,
 		"tabType": 0,
-		"describes": "",
-		"sequence": '',
-		"pid": 0,
 		"name": "文件",
 		"floatPrompt": "",
 		"openby": 0,
 		children:[
 			{
+			"id": '91',
+			"url": "/Views/User/UserView.html",
+			"icon": "",
+			"tabType": 0,
+			"name": "文件上传",
+			"floatPrompt": "",
+			"openby": 0,
+			},
+			{
 			"id": '93',
 			"url": "/Views/excel.html",
 			"icon": "",
-			"isdelete": false,
 			"tabType": 0,
-			"describes": "",
-			"sequence": '',
-			"pid": 0,
 			"name": "Excel解析",
 			"floatPrompt": "",
 			"openby": 0,
-			}]
+			}
+			]
 		}];
 	
 	/** 页面实体 */
